--- a/templates/customer_edit_form.html
+++ b/templates/customer_edit_form.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %} {% block title %}Edit {{ customer.firstName }} {{
-customer.lastName }}{% endblock %} {% block content %}
+{% extends 'base.html' %} {% block title %}Edit {{ customer.fullName() }} {%
+endblock %} {% block content %}
 
 <form action="/{{ customer.id }}/edit/" method="POST">
   <h1>Edit Customer</h1>
