--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,10 @@
               <a class="nav-link" href="/add/">Add a Customer</a>
             </li>
           </ul>
+            <form method='GET' action="/" class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" name='name' placeholder="Search Customer" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
         </div>
       </nav>
     </div>
