--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,11 @@
                 Customers <span class="sr-only">(current)</span>
               </a>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/best">
+                  Best Customers <span class="sr-only">(current)</span>
+                </a>
+              </li>
             <li class="nav-item">
               <a class="nav-link" href="/add/">Add a Customer</a>
             </li>
